--- a/Project-1/Develop/assets/css/style.css
+++ b/Project-1/Develop/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/* apply styles to HEADER */
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -50,6 +52,8 @@ p {
     font-size: 16px;
 }
 
+/* Hero Style Start */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -85,6 +89,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
+
+/* benefit styles start here */
 
 .benefit-lead {
     margin-bottom: 32px;
@@ -133,6 +139,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* beneifit styles end here */
 
 .search-engine-optimization {
     margin-bottom: 20px;
