--- a/Project-1/Develop/assets/css/style.css
+++ b/Project-1/Develop/assets/css/style.css
@@ -13,7 +13,6 @@ body {
 
 .header {
     padding: 20px;
-    
     background-color: #2a607c;
     color: #ffffff;
 }
@@ -62,7 +61,10 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
 }
+
+/* Hero Style End */
 
 .float-left {
     float: left;
